--- a/_includes/about/timeline.html
+++ b/_includes/about/timeline.html
@@ -5,6 +5,7 @@
         <div class="content">
           <h3>{{ item.title }}</h3>
           <h6 class="date">{{ item.from }} — {{ item.to }}</h6>
+          <h6>{{item.supervisor}}</h6>
           <p>{{ item.description }}</p>
         </div>
       </div>
