--- a/_includes/projects/project-card.html
+++ b/_includes/projects/project-card.html
@@ -1,3 +1,4 @@
+<!--
 <div class="wow animated fadeIn" data-wow-delay=".15s">
   <a href="{{ project_url }}" class="project card text-themed" {%- if external and site.open_new_tab -%} target="_blank" {%- endif -%}>
     {%- if project_img -%}
@@ -18,4 +19,22 @@
       </p>
     </div>
   </a>
+</div>
+-->
+
+<div class="wow animated fadeIn" data-wow-delay=".15s">
+  <h5 id="{{ project_id }}-name">
+    {%- if project_type == "remote" -%}
+    <i class="fab fa-github" data-toggle="tooltip" data-placement="bottom" data-delay="250" title="GitHub Repository"></i> |&nbsp;
+    {%- endif -%}
+    <a href="{{ project_url }}" {%- if external and site.open_new_tab -%} target="_blank" {%- endif -%}>
+      {{ project_name }}
+    </a>
+  </h5>
+  <p id="{{ project_id }}-desc">{{ project_desc }}</p>
+  <p id="{{ project_id }}-tools">
+    {%- for tool in project_tools -%}
+    <span class="badge badge-pill text-primary border border-primary ml-1">{{ tool }}</span>
+    {%- endfor -%}
+  </p>
 </div>
