--- a/_includes/posts/post-card.html
+++ b/_includes/posts/post-card.html
@@ -1,4 +1,4 @@
-{%- comment -%} Default Styles {%- endcomment -%}
+<!-- {%- comment -%} Default Styles {%- endcomment -%}
 {%- assign card_style  = '' -%}
 {%- assign text_style  = 'text-themed' -%}
 {%- assign badge_style = 'badge-dark' -%}
@@ -46,4 +46,21 @@
       {{ post.date | date_to_long_string }}
     </div>
   </a>
+</div> -->
+
+<div class="col-lg-6 my-3 wow animated fadeIn" data-wow-delay=".15s">
+  <div class="row">
+    <div class="col">
+      <h3><a href="{{ post_url }}" {%- if post.external_url and site.open_new_tab -%} target="_blank" {%- endif -%}>{{ post.title }}</a></h3>
+    </div>
+    <div class="col">
+      <p>
+        {%- if post.description -%}
+        {{ post.description }}
+        {%- else -%}
+        {{ post.content | truncatewords: 25, "<small><i>  read more...</i></small>" }}
+        {%- endif -%}
+      </p>
+    </div>
+  </div>
 </div>
