--- a/_includes/posts/post-card.html
+++ b/_includes/posts/post-card.html
@@ -48,7 +48,7 @@
   </a>
 </div> -->
 
-<div class="col-lg-6 my-3 wow animated fadeIn" data-wow-delay=".15s">
+<div>
   <div class="row">
     <div class="col">
       <h3><a href="{{ post_url }}" {%- if post.external_url and site.open_new_tab -%} target="_blank" {%- endif -%}>{{ post.title }}</a></h3>
