--- a/_includes/projects/project-card.html
+++ b/_includes/projects/project-card.html
@@ -22,7 +22,7 @@
 </div>
 -->
 
-<div class="wow animated fadeIn" data-wow-delay=".15s">
+<div>
   <h5 id="{{ project_id }}-name">
     {%- if project_type == "remote" -%}
     <i class="fab fa-github" data-toggle="tooltip" data-placement="bottom" data-delay="250" title="GitHub Repository"></i> |&nbsp;
