--- a/_includes/blog/post-card.html
+++ b/_includes/blog/post-card.html
@@ -46,21 +46,35 @@
       {{ post.date | date_to_long_string }}
     </div>
   </a>
-</div> -->
+</div>  -->
 
-<div>
-  <div class="row">
-    <div class="col">
-      <h3><a href="{{ post_url }}" {%- if post.external_url and site.open_new_tab -%} target="_blank" {%- endif -%}>{{ post.title }}</a></h3>
-    </div>
-    <div class="col">
-      <p>
-        {%- if post.description -%}
-        {{ post.description }}
-        {%- else -%}
-        {{ post.content | truncatewords: 25, "<small><i>  read more...</i></small>" }}
-        {%- endif -%}
-      </p>
-    </div>
+
+{%- comment -%} Determine Post URL {%- endcomment -%}
+{%- if post.external_url -%}
+  {%- assign post_url = post.external_url -%}
+{%- else -%}
+  {%- assign post_url = post.url | relative_url -%}
+{%- endif -%}
+
+<div class="row my-3 wow animated fadeIn" data-wow-delay=".15s">
+  <div class="col-lg-6">
+    <h3><a href="{{ post_url }}" {%- if post.external_url and site.open_new_tab -%} target="_blank" {%- endif -%}>{{ post.title }}</a></h3>
+    <p>
+      {%- if post.description -%}
+      {{ post.description }}
+      {%- else -%}
+      {{ post.content | truncatewords: 25, "<small><i>  read more...</i></small>" }}
+      {%- endif -%}
+    </p>
+  </div>
+  <div class="col-lg-6">
+    <p>
+      {{ post.date | date_to_long_string }}
+    </p>
+    <p>
+      {% for tag in post.tags %}
+      <span class="badge badge-dark">{{ tag }}</span>
+      {% endfor %}
+    </p>
   </div>
 </div>
