--- a/_includes/blog/post-card.html
+++ b/_includes/blog/post-card.html
@@ -49,6 +49,7 @@
 </div>  -->
 
 
+
 {%- comment -%} Determine Post URL {%- endcomment -%}
 {%- if post.external_url -%}
   {%- assign post_url = post.external_url -%}
@@ -56,8 +57,8 @@
   {%- assign post_url = post.url | relative_url -%}
 {%- endif -%}
 
-<div class="row my-3 wow animated fadeIn" data-wow-delay=".15s">
-  <div class="col-lg-6">
+<div class="row justify-content-center my-3 wow animated fadeIn" data-wow-delay=".15s">
+  <div class="col-lg-4">
     <h3><a href="{{ post_url }}" {%- if post.external_url and site.open_new_tab -%} target="_blank" {%- endif -%}>{{ post.title }}</a></h3>
     <p>
       {%- if post.description -%}
@@ -67,13 +68,13 @@
       {%- endif -%}
     </p>
   </div>
-  <div class="col-lg-6">
+  <div class="col-lg-4">
     <p>
       {{ post.date | date_to_long_string }}
     </p>
     <p>
       {% for tag in post.tags %}
-      <span class="badge badge-dark">{{ tag }}</span>
+      <span class="badge badge-info">{{ tag }}</span>
       {% endfor %}
     </p>
   </div>
