--- a/_includes/blog/post-card.html
+++ b/_includes/blog/post-card.html
@@ -58,7 +58,7 @@
 {%- endif -%}
 
 <div class="row justify-content-center my-3 wow animated fadeIn" data-wow-delay=".15s">
-  <div class="col-lg-4">
+  <div class="col-lg-8">
     <h3><a href="{{ post_url }}" {%- if post.external_url and site.open_new_tab -%} target="_blank" {%- endif -%}>{{ post.title }}</a></h3>
     <p>
       {%- if post.description -%}
@@ -68,13 +68,13 @@
       {%- endif -%}
     </p>
   </div>
-  <div class="col-lg-4">
+  <div class="col-lg-4 offset-lg-2">
     <p>
       {{ post.date | date_to_long_string }}
     </p>
     <p>
       {% for tag in post.tags %}
-      <span class="badge badge-info">{{ tag }}</span>
+      <span class="badge badge-warning">{{ tag }}</span>
       {% endfor %}
     </p>
   </div>
