--- a/_includes/blog/post-card.html
+++ b/_includes/blog/post-card.html
@@ -68,7 +68,7 @@
       {%- endif -%}
     </p>
   </div>
-  <div class="col-lg-4 offset-lg-2">
+  <div class="col-lg-4">
     <p>
       {{ post.date | date_to_long_string }}
     </p>
