--- a/_includes/blog/post-card.html
+++ b/_includes/blog/post-card.html
@@ -58,10 +58,10 @@
 {%- endif -%}
 
 <div class="row justify-content-center my-3 wow animated fadeIn" data-wow-delay=".15s">
-  <div class="col-lg-9">
-    <h3><a href="{{ post_url }}" {%- if post.external_url and site.open_new_tab -%} target="_blank" {%- endif -%}>{{ post.title }}</a></h3>
+  <div class="col-lg-8">
+    <h2><a href="{{ post_url }}" {%- if post.external_url and site.open_new_tab -%} target="_blank" {%- endif -%}>{{ post.title }}</a></h3>
     <p>
-      {%- if post.description -%}.
+      {%- if post.description -%}
       {{ post.description }}
       {%- else -%}
       {{ post.content | truncatewords: 25, "<small><i>  read more...</i></small>" }}
