--- a/_includes/blog/post-card.html
+++ b/_includes/blog/post-card.html
@@ -50,6 +50,7 @@
 
 
 
+
 {%- comment -%} Determine Post URL {%- endcomment -%}
 {%- if post.external_url -%}
   {%- assign post_url = post.external_url -%}
@@ -57,25 +58,27 @@
   {%- assign post_url = post.url | relative_url -%}
 {%- endif -%}
 
-<div class="row justify-content-center my-3 wow animated fadeIn" data-wow-delay=".15s">
-  <div class="col-lg-8 mx-auto">
-    <h4><a href="{{ post_url }}" {%- if post.external_url and site.open_new_tab -%} target="_blank" {%- endif -%}>{{ post.title }}</a></h3>
-    <p>
-      {%- if post.description -%}
-      {{ post.description }}
-      {%- else -%}
-      {{ post.content | truncatewords: 25, "<small><i>  read more...</i></small>" }}
-      {%- endif -%}
-    </p>
-  </div>
-  <div class="col-lg-4 mx-auto">
-    <p>
-      {{ post.date | date_to_long_string }}
-    </p>
-    <p>
-      {% for tag in post.tags %}
-      <span class="badge badge-warning">{{ tag }}</span>
-      {% endfor %}
-    </p>
+<div class="d-flex justify-content-center">
+  <div class="row my-3 wow animated fadeIn" data-wow-delay=".15s">
+    <div class="col-lg-6">
+      <h3><a href="{{ post_url }}" {%- if post.external_url and site.open_new_tab -%} target="_blank" {%- endif -%}>{{ post.title }}</a></h3>
+      <p>
+        {%- if post.description -%}
+        {{ post.description }}
+        {%- else -%}
+        {{ post.content | truncatewords: 25, "<small><i>  read more...</i></small>" }}
+        {%- endif -%}
+      </p>
+    </div>
+    <div class="col-lg-4">
+      <p>
+        {{ post.date | date_to_long_string }}
+      </p>
+      <p>
+        {% for tag in post.tags %}
+        <span class="badge badge-dark">{{ tag }}</span>
+        {% endfor %}
+      </p>
+    </div>
   </div>
 </div>
