--- a/_includes/blog/post-card.html
+++ b/_includes/blog/post-card.html
@@ -58,10 +58,10 @@
   {%- assign post_url = post.url | relative_url -%}
 {%- endif -%}
 
-<div class="d-flex justify-content-center">
+<div style="position: absolute; left: 200px;">
   <div class="row my-3 wow animated fadeIn" data-wow-delay=".15s">
     <div class="col-lg-6">
-      <h3><a href="{{ post_url }}" {%- if post.external_url and site.open_new_tab -%} target="_blank" {%- endif -%}>{{ post.title }}</a></h3>
+      <h4><a href="{{ post_url }}" {%- if post.external_url and site.open_new_tab -%} target="_blank" {%- endif -%}>{{ post.title }}</a></h3>
       <p>
         {%- if post.description -%}
         {{ post.description }}
@@ -76,7 +76,7 @@
       </p>
       <p>
         {% for tag in post.tags %}
-        <span class="badge badge-dark">{{ tag }}</span>
+        <span class="badge badge-warning">{{ tag }}</span>
         {% endfor %}
       </p>
     </div>
