--- a/_includes/blog/post-card.html
+++ b/_includes/blog/post-card.html
@@ -58,9 +58,9 @@
   {%- assign post_url = post.url | relative_url -%}
 {%- endif -%}
 
-<div style="position: absolute; left: 400px;">
+<div style="margin-left: auto; margin-right: auto; width: 50%;">
   <div class="row my-3 wow animated fadeIn" data-wow-delay=".15s">
-    <div class="col-lg-6" style="position: relative;">
+    <div class="col-lg-6">
       <h4><a href="{{ post_url }}" {%- if post.external_url and site.open_new_tab -%} target="_blank" {%- endif -%}>{{ post.title }}</a></h3>
       <p>
         {%- if post.description -%}
@@ -70,7 +70,7 @@
         {%- endif -%}
       </p>
     </div>
-    <div class="col-lg-4" style="position: relative;">
+    <div class="col-lg-4">
       <p>
         {{ post.date | date_to_long_string }}
       </p>
